--- a/index.html
+++ b/index.html
@@ -534,8 +534,9 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+        // GÜNCELLENMİŞ FIREBASE CONFIG (YENİ API KEY İLE)
         const firebaseConfig = {
-          apiKey: "AIzaSyDVV5cLOkjaJ3k-FUwqRE4LucN293RPBbM",
+          apiKey: "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE",
           authDomain: "kahvelabweb.firebaseapp.com",
           projectId: "kahvelabweb",
           storageBucket: "kahvelabweb.firebasestorage.app",
@@ -547,9 +548,8 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // --- GEMINI API KEY ---
-        // BURAYA KENDİ KEYİNİ YAZMALISIN
-        const GEMINI_API_KEY = "API_KEY_YOK"; 
+        // --- GEMINI API KEY (YENİ KEY İLE) ---
+        const GEMINI_API_KEY = "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE"; 
 
         // --- GLOBAL VARIABLES ---
         let selectedImageBase64 = null;
