--- a/index.html
+++ b/index.html
@@ -253,14 +253,14 @@
                 <div id="form-login">
                     <input type="email" id="login-email" class="auth-input" placeholder="E-Posta (volkan@litre.com)">
                     <input type="password" id="login-pass" class="auth-input" placeholder="Şifre">
-                    <button class="submit-btn" onclick="window.handleLogin()">Giriş Yap</button>
+                    <button id="btn-login-action" class="submit-btn" onclick="window.handleLogin()">Giriş Yap</button>
                     <div style="text-align:center; margin-top:10px; font-size:12px; color:var(--primary); cursor:pointer;">Şifremi Unuttum</div>
                 </div>
 
                 <div id="form-register" class="hidden">
                     <input type="email" id="reg-email" class="auth-input" placeholder="E-Posta">
                     <input type="password" id="reg-pass" class="auth-input" placeholder="Şifre Oluştur">
-                    <button class="submit-btn" onclick="window.handleRegister()">Devam Et</button>
+                    <button id="btn-reg-action" class="submit-btn" onclick="window.handleRegister()">Devam Et</button>
                 </div>
 
                 <div style="display:flex; align-items:center; margin:25px 0;">
@@ -525,9 +525,9 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // FIREBASE CONFIG
+        // YENİ API KEY İLE GÜNCELLENMİŞ CONFIG
         const firebaseConfig = {
-          apiKey: "AIzaSyDVV5cLOkjaJ3k-FUwqRE4LucN293RPBbM", 
+          apiKey: "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE", // Burayı verdiğin yeni key ile güncelledim
           authDomain: "kahvelabweb.firebaseapp.com",
           projectId: "kahvelabweb",
           storageBucket: "kahvelabweb.firebasestorage.app",
@@ -560,20 +560,42 @@
         }
 
         window.handleLogin = async function() {
+            // Görsel Geri Bildirim
+            const btn = document.getElementById('btn-login-action');
+            btn.innerText = "Giriş yapılıyor...";
+            
             const email = document.getElementById('login-email').value;
             const pass = document.getElementById('login-pass').value;
-            try { await signInWithEmailAndPassword(auth, email, pass); } 
-            catch (error) { alert("Giriş Hatası: " + error.message); }
+            
+            try { 
+                await signInWithEmailAndPassword(auth, email, pass); 
+                // Başarılı olursa onAuthStateChanged tetiklenecek
+            } 
+            catch (error) { 
+                alert("Giriş Hatası: " + error.message); 
+                btn.innerText = "Giriş Yap"; // Hata olursa butonu eski haline getir
+            }
         }
 
         window.handleRegister = async function() {
+             // Görsel Geri Bildirim
+            const btn = document.getElementById('btn-reg-action');
+            btn.innerText = "Kayıt olunuyor...";
+
             const email = document.getElementById('reg-email').value;
             const pass = document.getElementById('reg-pass').value;
-            if(!email || !pass) { alert("Lütfen alanları doldurun."); return; }
+            if(!email || !pass) { 
+                alert("Lütfen alanları doldurun."); 
+                btn.innerText = "Devam Et";
+                return; 
+            }
             try { 
                 await createUserWithEmailAndPassword(auth, email, pass); 
-                // Kayıt başarılı, onAuthStateChanged tetiklenecek ve profil kontrolü yapacak
-            } catch (error) { alert("Kayıt Hatası: " + error.message); }
+                // Kayıt başarılı, onAuthStateChanged tetiklenecek
+            } catch (error) { 
+                alert("Kayıt Hatası: " + error.message); 
+                btn.innerText = "Devam Et";
+            }
         }
 
         window.logoutUser = async function() {
@@ -625,6 +647,9 @@
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 // KULLANICI GİRİŞ YAPTI
+                // Giriş butonunu eski haline getir (belki takılı kalmıştır)
+                if(document.getElementById('btn-login-action')) document.getElementById('btn-login-action').innerText = "Giriş Yap";
+
                 try {
                     const docRef = doc(db, "users", user.uid);
                     const docSnap = await getDoc(docRef);
