--- a/index.html
+++ b/index.html
@@ -525,9 +525,9 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // YENİ API KEY İLE GÜNCELLENMİŞ CONFIG
+        // FIREBASE İÇİN ESKİ (DOĞRU) ANAHTARI GERİ KOYDUM
         const firebaseConfig = {
-          apiKey: "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE", // Burayı verdiğin yeni key ile güncelledim
+          apiKey: "AIzaSyDVV5cLOkjaJ3k-FUwqRE4LucN293RPBbM", 
           authDomain: "kahvelabweb.firebaseapp.com",
           projectId: "kahvelabweb",
           storageBucket: "kahvelabweb.firebasestorage.app",
@@ -539,7 +539,7 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // GEMINI API KEY
+        // GEMINI İÇİN YENİ VERDİĞİN ANAHTARI BURAYA KOYDUM
         const GEMINI_API_KEY = "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE"; 
 
         // --- GLOBAL VARIABLES ---
