--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-        // FIREBASE İÇİN ESKİ (DOĞRU) ANAHTARI GERİ KOYDUM
+        // CONFIG (Senin verdiğin bilgilerle güncellendi)
+        // DİKKAT: AIzaSyDVV ile başlayan key Firebase'indir.
         const firebaseConfig = {
           apiKey: "AIzaSyDVV5cLOkjaJ3k-FUwqRE4LucN293RPBbM", 
           authDomain: "kahvelabweb.firebaseapp.com",
@@ -539,7 +540,7 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // GEMINI İÇİN YENİ VERDİĞİN ANAHTARI BURAYA KOYDUM
+        // GEMINI KEY (Senin "Api Key" dediğin, AIzaSyCj ile başlayan)
         const GEMINI_API_KEY = "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE"; 
 
         // --- GLOBAL VARIABLES ---
