--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, deleteUser } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, addDoc, getDocs, orderBy, query, enableIndexedDbPersistence } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, addDoc, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
           apiKey: "AIzaSyDVV5cLOkjaJ3k-FUwqRE4LucN293RPBbM",
@@ -523,8 +523,7 @@
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        // Offline Persistence
-        enableIndexedDbPersistence(db).catch((err) => { console.log(err.code); });
+        // enableIndexedDbPersistence KALDIRILDI - Gizli sekmede kilitlenmeyi önler.
 
         const GEMINI_API_KEY = "AIzaSyCjSBmLJsOOb-uG9SRPt2c8cA5cAu1sfdE";
 
@@ -618,34 +617,35 @@
         }
 
         // --- FIRESTORE USER PROFILE ---
+        // GÜNCELLENEN FONKSİYON: Hata olsa bile loading'i kapatır (finally bloğu)
         window.saveUserProfile = async function(isOnboarding) {
             const user = auth.currentUser;
             if(!user) return;
 
             const prefix = isOnboarding ? 'ob-' : 'edit-';
-            // Capitalize Name Here
-            const rawName = document.getElementById(prefix + 'name').value;
-            const name = capitalizeWords(rawName);
-
-            const birthdate = document.getElementById(prefix + 'birthdate').value;
-            const gender = document.getElementById(prefix + 'gender').value;
-            const status = document.getElementById(prefix + 'status').value;
-            const job = document.getElementById(prefix + 'job').value;
-
-            if(isOnboarding && (!name || !birthdate || !gender)) {
-                alert("Lütfen temel bilgileri doldurun.");
-                return;
-            }
-
-            const userData = {
-                name: name, birthdate: birthdate, gender: gender, status: status, job: job, updatedAt: new Date()
-            };
-
+            
             try {
+                // DOM okumalarını try içine aldık
+                const rawName = document.getElementById(prefix + 'name').value;
+                const name = capitalizeWords(rawName);
+                const birthdate = document.getElementById(prefix + 'birthdate').value;
+                const gender = document.getElementById(prefix + 'gender').value;
+                const status = document.getElementById(prefix + 'status').value;
+                const job = document.getElementById(prefix + 'job').value;
+
+                if(isOnboarding && (!name || !birthdate || !gender)) {
+                    alert("Lütfen temel bilgileri doldurun.");
+                    return;
+                }
+
+                const userData = {
+                    name: name, birthdate: birthdate, gender: gender, status: status, job: job, updatedAt: new Date()
+                };
+
                 // Show loading
                 document.getElementById('loading-overlay').style.display = 'flex';
+                
                 await setDoc(doc(db, "users", user.uid), userData, { merge: true });
-                document.getElementById('loading-overlay').style.display = 'none';
 
                 if(isOnboarding) {
                     window.navTo('home-screen');
@@ -654,8 +654,10 @@
                     window.navTo('profile-screen');
                 }
             } catch(e) { 
-                document.getElementById('loading-overlay').style.display = 'none';
                 alert("Kaydetme hatası: " + e.message); 
+            } finally {
+                // Her durumda (hata olsa bile) çalışır
+                document.getElementById('loading-overlay').style.display = 'none';
             }
         }
 
